// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WalletVote > should disable vote button when balance is less than votesAmountStep 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-row items-center justify-start xs:justify-center md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="flex flex-col items-center gap-2 text-base font-semibold sm:flex-row"
      >
        <p
          class="text-center leading-5 text-theme-secondary-700 dark:text-theme-dark-200 xs:text-left"
        >
          You have not voted for a Delegate yet.
        </p>
        <a
          class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-row items-center justify-start xs:justify-center md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="flex flex-col items-center gap-2 text-base font-semibold sm:flex-row"
      >
        <p
          class="text-center leading-5 text-theme-secondary-700 dark:text-theme-dark-200 xs:text-left"
        >
          You have not voted for a Delegate yet.
        </p>
        <a
          class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render as all resigned 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-dark-700 md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="flex w-full flex-row items-center gap-2 bg-theme-secondary-100 p-3 text-sm font-semibold leading-[17px] dark:bg-theme-dark-950 md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="max-w-28 truncate xs:max-w-32 sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-sm dark:text-theme-dark-50 md:text-base md:leading-5 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base font-semibold leading-5 md:flex-row md:px-0 md:py-0"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold text-theme-secondary-900 dark:text-theme-dark-50 md:mb-0 md:text-base md:leading-5"
        >
          N/A
        </p>
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:hidden"
        >
          Delegate Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-danger-400 border-theme-danger-100 dark:border-theme-danger-400 flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          All Resigned
        </div>
        <div
          class="relative mx-2 border-l border-t-0 border-solid align-middle ml-1 mr-3 hidden h-5 border-theme-secondary-300 p-0 dark:border-s-theme-dark-700 md:flex"
        />
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render disabled vote button 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-row items-center justify-start xs:justify-center md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="flex flex-col items-center gap-2 text-base font-semibold sm:flex-row"
      >
        <p
          class="text-center leading-5 text-theme-secondary-700 dark:text-theme-dark-200 xs:text-left"
        >
          You have not voted for a Delegate yet.
        </p>
        <a
          class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render ledger for incompatible ledger wallet 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-row items-center justify-start xs:justify-center md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="flex flex-col items-center gap-2 text-base font-semibold sm:flex-row"
      >
        <p
          class="text-center leading-5 text-theme-secondary-700 dark:text-theme-dark-200 xs:text-left"
        >
          You have not voted for a Delegate yet.
        </p>
        <a
          class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        disabled=""
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render skelethon if loading 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col rounded-xl border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-800 dark:bg-black md:border-0 md:bg-transparent md:dark:bg-transparent"
    data-testid="WalletVote__skeleton"
  >
    <div
      class="flex w-full items-center px-6 py-4 md:p-0"
    >
      <div
        class="mr-4 hidden md:block"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 44px; height: 44px; border-radius: 50%;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="flex h-10 flex-col justify-between"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
      <div
        class="ml-auto"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 44px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
    <div
      class="flex justify-center border-t border-theme-secondary-300 px-6 py-4 dark:border-theme-secondary-800 md:hidden"
    >
      <div
        class="flex h-10 flex-col items-center justify-between"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 150px; height: 16px;"
          >
            ‌
          </span>
          <br />
        </span>
        <span
          aria-busy="true"
          aria-live="polite"
          class="flex w-auto max-w-full items-center overflow-hidden leading-none"
        >
          <span
            class="react-loading-skeleton"
            style="width: 100px; height: 14px;"
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render the maximum votes 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-row items-center justify-start xs:justify-center md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="flex flex-col items-center gap-2 text-base font-semibold sm:flex-row"
      >
        <p
          class="text-center leading-5 text-theme-secondary-700 dark:text-theme-dark-200 xs:text-left"
        >
          You have not voted for a Delegate yet.
        </p>
        <a
          class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > should render without votes 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="flex w-full flex-row items-center justify-start xs:justify-center md:justify-start"
      data-testid="EmptyVotes"
    >
      <div
        class="flex flex-col items-center gap-2 text-base font-semibold sm:flex-row"
      >
        <p
          class="text-center leading-5 text-theme-secondary-700 dark:text-theme-dark-200 xs:text-left"
        >
          You have not voted for a Delegate yet.
        </p>
        <a
          class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-none text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 ring-focus group/inner inline-block"
          data-ring-focus-margin="-m-1"
          data-testid="Link"
          href="https://arkvault.io/docs/transactions/vote"
          rel="noopener noreferrer"
        >
          <span
            class="break-all border-b border-transparent transition-colors delay-100 duration-200 group-hover/inner:border-current"
          >
            <span
              class="text-base leading-5"
            >
              Learn more
            </span>
          </span>
          <div
            class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
            data-testid="Link__external"
          >
            <div
              style="height: 12px; width: 12px;"
            >
              <svg
                id="arrow-external"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a delegate without rank 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-dark-700 md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="flex w-full flex-row items-center gap-2 bg-theme-secondary-100 p-3 text-sm font-semibold leading-[17px] dark:bg-theme-dark-950 md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="max-w-28 truncate xs:max-w-32 sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-sm dark:text-theme-dark-50 md:text-base md:leading-5 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base font-semibold leading-5 md:flex-row md:px-0 md:py-0"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold text-theme-secondary-900 dark:text-theme-dark-50 md:mb-0 md:text-base md:leading-5"
        >
          N/A
        </p>
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:hidden"
        >
          Delegate Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-warning-700 border-theme-danger-100 dark:border-theme-warning-700 flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          Standby
        </div>
        <div
          class="relative mx-2 border-l border-t-0 border-solid align-middle ml-1 mr-3 hidden h-5 border-theme-secondary-300 p-0 dark:border-s-theme-dark-700 md:flex"
        />
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for a standby delegate 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-dark-700 md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="flex w-full flex-row items-center gap-2 bg-theme-secondary-100 p-3 text-sm font-semibold leading-[17px] dark:bg-theme-dark-950 md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="max-w-28 truncate xs:max-w-32 sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-sm dark:text-theme-dark-50 md:text-base md:leading-5 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base font-semibold leading-5 md:flex-row md:px-0 md:py-0"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold text-theme-secondary-900 dark:text-theme-dark-50 md:mb-0 md:text-base md:leading-5"
        >
          #52
        </p>
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:hidden"
        >
          Delegate Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded text-theme-warning-700 border-theme-danger-100 dark:border-theme-warning-700 flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid"
        >
          Standby
        </div>
        <div
          class="relative mx-2 border-l border-t-0 border-solid align-middle ml-1 mr-3 hidden h-5 border-theme-secondary-300 p-0 dark:border-s-theme-dark-700 md:flex"
        />
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletVote > single vote networks > should render a vote for an active delegate 1`] = `
<DocumentFragment>
  <div
    class="flex w-full flex-col items-center md:flex-row md:items-center"
    data-testid="WalletVote"
  >
    <div
      class="mb-3 flex w-full flex-col items-start justify-between gap-0 overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-dark-700 md:mb-0 md:flex-row md:items-center md:gap-2 md:rounded-none md:border-none"
    >
      <div
        class="flex w-full flex-row items-center gap-2 bg-theme-secondary-100 p-3 text-sm font-semibold leading-[17px] dark:bg-theme-dark-950 md:w-auto md:bg-transparent md:p-0 md:text-base md:leading-5 md:dark:bg-transparent"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Voting for
        </p>
        <div
          class="max-w-28 truncate xs:max-w-32 sm:max-w-40 md:max-w-48"
        >
          <div
            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
          >
            <span
              class="no-ligatures min-w-0 overflow-hidden text-sm dark:text-theme-dark-50 md:text-base md:leading-5 font-semibold text-base"
              data-testid="Address__address"
            >
              D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col gap-2 px-4 py-3 text-base font-semibold leading-5 md:flex-row md:px-0 md:py-0"
      >
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:text-base md:leading-5"
        >
          Rank
        </p>
        <p
          class="mb-2 text-sm font-semibold text-theme-secondary-900 dark:text-theme-dark-50 md:mb-0 md:text-base md:leading-5"
        >
          #10
        </p>
        <p
          class="text-sm text-theme-secondary-700 dark:text-theme-dark-200 md:hidden"
        >
          Delegate Status
        </p>
        <div
          class="font-semibold overflow-hidden no-ligatures px-1 border-2 rounded bg-theme-success-100 text-theme-success-700 dark:border dark:bg-transparent dark:text-theme-success-500 flex h-fit w-fit items-center justify-center border-none py-0.5 text-xs dark:border-solid dark:border-theme-success-800"
        >
          Active
        </div>
        <div
          class="relative mx-2 border-l border-t-0 border-solid align-middle ml-1 mr-3 hidden h-5 border-theme-secondary-300 p-0 dark:border-s-theme-dark-700 md:flex"
        />
      </div>
    </div>
    <div
      class="md:max-md:self-end w-full md:w-auto"
    >
      <button
        class="px-5 py-3 text-base relative items-center justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed bg-transparent dark:bg-transparent hover:text-theme-primary-700 hover:bg-theme-primary-200 dark:hover:bg-theme-secondary-800 dark:hover:text-white mt-4 hidden w-full space-x-2 text-theme-primary-600 dark:text-theme-dark-navy-400 md:mt-0 md:flex md:w-auto md:px-2 md:py-[3px]"
        data-testid="WalletVote__button"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
      <button
        class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-secondary-800 bg-theme-primary-100 hover:bg-theme-primary-800 green:hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-500 w-full text-theme-primary-600 dark:text-white md:hidden"
        data-testid="WalletVote__button_mobile"
        type="button"
      >
        <div
          class="flex items-center space-x-2"
        >
          <div>
            <div
              style="height: 16px; width: 16px;"
            >
              <svg
                id="vote"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M7 9.404l2.1 3.182c.2.298.4.398.7.398s.6-.1.8-.299l6.7-9.05"
                  />
                  <path
                    d="M19 12.337v4.077C19 17.807 17.9 19 16.5 19H3.6C2.2 18.9 1 17.906 1 16.414V3.486C1 2.094 2.1 1 3.5 1h6.8"
                  />
                </g>
              </svg>
            </div>
          </div>
          <span>
            Vote
          </span>
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
